# cpp-intro-lab

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
src/: hello.cpp
src/areas/: geom.cpp  geom.hpp  main.cpp
src/numbers/: main.cpp  primitive_vecnum.hpp
